[package]
name = "coffea"
version = "0.1.0"
authors = ["ConnorSkees <39542938+ConnorSkees@users.noreply.github.com>"]
description = "A very much WIP Java bytecode decompiler"
readme = "README.md"
license = "MIT"
categories = ["parser-implementations"]
keywords = ["java", "jvm", "bytecode"]
repository = "https://github.com/connorskees/coffea"
edition = "2018"
exclude = ["*.java", "tests", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/main.rs"

[lib]
name = "coffea"
path = "src/lib.rs"

[dependencies]
bitreader = "0.3.2"
zip-rs = "0.1.1"

[profile.release]
debug = true